# Attune

./: README.md  index.html
backend/: analysis.py  app.py  database.py  main.py  monitor.py  pyproject.toml
frontend/: code.jsx  index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: SessionTimeline.jsx
frontend/src/components/layout/: Layout.jsx  Navbar.jsx
frontend/src/components/pages/: Dashboard.jsx  NewSession.jsx  PastSession.jsx
frontend/src/components/ui/: Button.jsx  ProductivityChart.jsx  SessionCard.jsx  StatCard.jsx
frontend/src/services/: api.js
