[project]
name = "backend"
version = "0.1.0"
description = "Focus Tracker Backend - AI-powered focus monitoring with screenshot analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.6.1",
    "pillow>=12.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]
